# llm_prjs

project_1/: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml  person.cpp  person.h
